--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
       <div class="controls__modes">
-        <button class="controls__mode" id="jsPaint">
+        <button id="jsPaint">
           <i class="fa-solid fa-paintbrush"></i></button
-        ><button class="controls__mode" id="jsFill">
+        ><button id="jsFill">
           <i class="fa-solid fa-fill-drip"></i></button
-        ><button class="controls__mode" id="jsEraser">
+        ><button id="jsErase">
           <i class="fa-solid fa-eraser"></i>
         </button>
       </div>
@@ -37,7 +37,7 @@
         />
       </div>
       <div class="controls__btns">
-        <button id="jsMode">Paint</button>
+        <button id="jsClear">Clear</button>
         <button id="jsSave">Save</button>
       </div>
       <div class="controls__colors" id="jsColors">
@@ -77,6 +77,7 @@
           class="controls__color jsColor"
           style="background-color: #5856d6"
         ></div>
+        <div class="controls__color" id="jsRColor"></div>
       </div>
     </div>
     <script src="app.js"></script>
